apps/monitoring/apprise/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notify
  labels:
    name: notify
    app.kubernetes.io/name: apprise
    app.kubernetes.io/part-of: monitoring
